refactor(back): synchronize calendar API fields with creation response